--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Joke Generator</title>
 </head>
 <body>
+  <div id="header"><h1>Joke Generator</h1></div>
   <div id="app"></div>
 </body>
 </html>
